--- a/styles.css
+++ b/styles.css
@@ -10,18 +10,40 @@ body {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
+  height: 98vh;
+  margin: 0;
+}
+.logo-container {
+  height: 25%;
+  width: 100vw;
 }
 .logo-img {
-  width: 200px;
-  height: 200px;
+  max-width: 100%;
+  max-height: 100%;
 }
-.text-container {
-  width: 340px;
+.text-container-1,
+.text-container-2,
+.text-container-3 {
+  height: 25%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
-  background-color: #122620;
+}
+.text-container-1 {
+  background-color: #0e1e1a;
+}
+.text-container-2 {
+  background-color: #0b1713;
+}
+.text-container-3 {
+  background-color: #070f0d;
+}
+.text-container-4 {
+  background-color: #040806;
+}
+p {
+  max-width: 350px;
   margin: auto;
 }
 a {
@@ -29,8 +51,9 @@ a {
   text-decoration: none;
 }
 
-@media only screen and (min-width: 700px) {
-  body {
+/*
+@media only screen and (min-width: 750px) {
+   body {
     flex-direction: row;
     justify-content: center;
     height: 98vh;
@@ -43,4 +66,4 @@ a {
     width: 400px;
     height: 400px;
   }
-}
+} */
