--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
 .logo-img {
   max-width: 100%;
   max-height: 100%;
+  margin: auto;
 }
 .text-container-1,
 .text-container-2,
@@ -51,19 +52,53 @@ a {
   text-decoration: none;
 }
 
-/*
 @media only screen and (min-width: 750px) {
-   body {
-    flex-direction: row;
+  body {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    height: 100vh;
+  }
+
+  .text-container-1,
+  .text-container-2,
+  .text-container-3 {
+    height: auto;
+    width: auto;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    height: 98vh;
   }
-  .logo-container,
-  .text-container {
-    margin: auto 4em;
+  .text-container-1 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
   }
-  .logo-img {
-    width: 400px;
-    height: 400px;
+  .text-container-2 {
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 4;
   }
-} */
+  .text-container-3 {
+    grid-column-start: 3;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 6;
+  }
+  .text-container-4 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 6;
+  }
+  .logo-container {
+    height: auto;
+    width: auto;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    display: flex;
+  }
+}
