--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body {
 .logo-img {
   max-width: 100%;
   max-height: 100%;
-  margin: auto;
 }
 .text-container-1,
 .text-container-2,
@@ -55,7 +54,7 @@ a {
 @media only screen and (min-width: 750px) {
   body {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(9, 1fr);
     height: 100vh;
   }
 
@@ -70,35 +69,40 @@ a {
   }
   .text-container-1 {
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 7;
     grid-row-start: 1;
     grid-row-end: 3;
   }
   .text-container-2 {
-    grid-column-start: 4;
-    grid-column-end: 6;
+    grid-column-start: 7;
+    grid-column-end: 10;
     grid-row-start: 1;
     grid-row-end: 4;
   }
   .text-container-3 {
-    grid-column-start: 3;
-    grid-column-end: 6;
+    grid-column-start: 4;
+    grid-column-end: 10;
     grid-row-start: 4;
     grid-row-end: 6;
   }
   .text-container-4 {
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 6;
   }
   .logo-container {
     height: auto;
     width: auto;
-    grid-column-start: 3;
-    grid-column-end: 4;
+    grid-column-start: 4;
+    grid-column-end: 7;
     grid-row-start: 3;
     grid-row-end: 4;
     display: flex;
+  }
+  .logo-img {
+    max-width: 70%;
+    max-height: 70%;
+    margin: auto;
   }
 }
