--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,10 @@ body {
   margin: 0;
 }
 .logo-container {
+  background-color: #122620;
   height: 25%;
   width: 100vw;
+  z-index: 3;
 }
 .logo-img {
   max-width: 100%;
@@ -32,12 +34,17 @@ body {
 }
 .text-container-1 {
   background-color: #0e1e1a;
+  animation: 2s ease-out 0s 1 slideInFromTop;
+  z-index: 2;
 }
 .text-container-2 {
   background-color: #0b1713;
+  animation: 3s ease-out 0s 1 slideInFromTop2;
+  z-index: 1;
 }
 .text-container-3 {
   background-color: #070f0d;
+  animation: 4s ease-out 0s 1 slideInFromTop3;
 }
 .text-container-4 {
   background-color: #040806;
@@ -132,6 +139,23 @@ a {
 @keyframes slideInFromTop {
   0% {
     transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes slideInFromTop2 {
+  0% {
+    transform: translateY(-200%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInFromTop3 {
+  0% {
+    transform: translateY(-300%);
   }
   100% {
     transform: translateY(0);
